# htcw_chess

./: CMakeLists.txt  README.md  library.json  library.properties
src/: chess.h
src/source/: chess.c
